--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,194 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body {
+  background-color: #1A1C21;
+  color: white;
+  font-family: "Space Grotesk", sans-serif;
   min-height: 100vh;
+}
+header {
+  font-size: 3vh;
+}
+header,
+form {
+  min-height: 20vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+}
+
+/*form elements*/
+form input,
+form button {
+  padding: 0.5rem;
+  font-size: 1.5rem;
+  border: none;
+  background: white;
+  height: 3.2rem;
+}
+form input {
+  padding: 1rem;
+  margin-left: 3rem;
+}
+form button {
+  color: white;
+  background: #66596e;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  margin-left: 0.3rem;
+  border-radius: 10px;
+  width: 2.6rem;
+  height: 2.6rem;
+  margin-right: 3rem;
+  
+}
+form button:hover {
+  background: #7a7291;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.input-container {
+  display: flex;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/*todo elements*/
+
+.todo-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.todo-list {
+  min-width: 30%;
+  list-style: none;
+}
+
+.todo {
+  margin: 0.5rem;
+  background: white;
+  font-size: 1.5rem;
+  color: black;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transition: all 1s ease;
+  border-radius: 10px;
+  height: 3.5rem;
+  padding: 0.5rem;
+  padding-right: 0.05rem;
+}
+
+.todo-input {
+  font-family: 'Space Grotesk', sans-serif;
+  border-radius: 10px;
+}
+
+.filter-todo {
+  padding: 1rem;
+  font-family: 'Space Grotesk', sans-serif;
+}
+.todo li {
+  flex: 1;
+}
+
+.trash-btn,
+.complete-btn {
+  background: #ef3d0c;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  padding: 1rem;
+  cursor: pointer;
+  font-size: 0.7rem;
+  margin-right: 0.4rem;
+}
+.complete-btn {
+  background: rgb(30, 179, 97);
+  margin-left: 0.5rem;
+}
+.todo-item {
+  padding: 0rem 0.5rem;
+}
+
+.fa-trash,
+.fa-check {
+  pointer-events: none;
+}
+
+.completed {
+  text-decoration: line-through;
+  opacity: 0.6;
+}
+
+/* category selector elements */
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  appearance: none;
+  outline: 0;
+  box-shadow: none;
+  border: 0 !important;
+  background-image: none;
+}
+
+.select {
+  margin: 1rem;
+  position: relative;
+  overflow: hidden;
+  border-radius: 10px;
+  min-width: 9rem;
+  margin-right: 3rem;
+}
+
+select {
+  color: #784178;
+  font-family: "Space Grotesk", sans-serif;
+  font-weight: 300;
+  font-size: 0.9rem;
+  cursor: pointer;
+  width: 12rem;
+  height: 3.2rem;
+  
+}
+
+.select::after {
+  content: "\25BC";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 1.1rem;
+  background: #594f5f;
+  cursor: pointer;
+  pointer-events: none;
+  border-radius: 10px;
+  padding: 0.6rem;
+  top: 11%;
+  margin-right: 0.35rem;
+}
+
+/* media queries */
+
+@media screen and (max-width: 600px) {
+  header {
+    font-size: 2vh;
   }
-  to {
-    transform: rotate(360deg);
+  body {
+    zoom: 0.8;
+  }
+  form input,
+  form select {
+    font-size: 0.8rem;
+  }
+  .select {
+    min-width: 3rem;
+  }
+  .todo {
+    font-size: 0.8rem;
   }
 }
